apps/giropops-senhas/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giropops-senhas
  labels:
    app: giropops-senhas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
      - name: giropops-senhas
        image: ghcr.io/luisbianconi/giropops-senhas:__IMAGE_TAG__
        ports:
        - containerPort: 5000
