apps/giropops-senhas/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-senhas
  labels:
    app: giropops-senhas
spec:
  selector:
    app: giropops-senhas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
