apps/giropops-senhas/service-redis.yaml
apiVersion: v1
kind: Service 
metadata:
  name: redis-service
  labels:
    app: redis-database
spec:
  selector:
    app: redis-database
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
